--- a/s06_Realm/RealmInsert/build.gradle
+++ b/s06_Realm/RealmInsert/build.gradle
@@ -1,9 +1,11 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "io.realm:realm-gradle-plugin:10.11.1"
+
     }
 }
 plugins {
